# bridge-sentinel

./: .gitignore  README.md  components.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: release.yml
installation/: contex-menu-background.reg  contex-menu.reg  custom-uri.reg  registry.reg  registry.wxs
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs
src/app/: app.ts  app_cloud_client.ts  crypto.ts  utils.ts
src/lib/: utils.ts
src/lib/components/: GenerateKeyDialog.svelte
src/lib/components/dashboard/: RepositoryDashboard.svelte  RepositorySettings.svelte  RepositoryTabs.svelte
src/lib/components/dialogs/share-dialog/: ShareDialog.svelte
src/lib/components/docs/dashboard/: DashboardPage.svelte  EmptyRepositoryDialog.svelte  InvalidRepository.svelte  InvalidRepositoryDialog.svelte  RepositoryDashboard.svelte  RepositorySettings.svelte  ShareKey.svelte
src/lib/components/docs/examples-nav/: ExamplesNav.svelte
src/lib/components/elements/: DevNav.svelte  index.ts
src/lib/components/elements/user-icon/: index.ts  user-icon.svelte
src/lib/components/pages/: index.ts
src/lib/components/pages/authentication/: AuthenticationPage.svelte  index.ts
src/lib/components/pages/dashboard/: DashboardPage.svelte  InvalidRepositoryDialog.svelte  RepositorySettings.svelte  RepositoryTabs.svelte
src/lib/components/pages/examples-nav/: index.ts
src/lib/components/pages/first-time/: FirstTimePage.svelte  index.ts
src/lib/components/pages/login/: LoginForm.svelte  LoginPage.svelte  index.ts
src/lib/components/pages/login-cloud/: LoginWebPage.svelte  index.ts
src/lib/components/pages/login-shared/: LoginSide.svelte  index.ts
src/lib/components/pages/register/: InputPassword.svelte  RegisterPage.svelte  UserRegisterForm.svelte  index.ts
src/lib/components/pages/register-cloud/: RegisterCloudPage.svelte  UserRegisterCloudForm.svelte  index.ts
src/lib/components/ui/card/: Card.svelte
src/lib/config/: docs.ts  pages.ts
src/lib/services/: backend.ts  bridge-cli.ts
src/lib/stores/: repository.ts  store.ts  user.ts
src/lib/types/: nav.ts
src/routes/: +layout.svelte  +page.ts
src/routes/auth/: +layout.svelte
src/routes/auth/first-time/: +page.svelte  +page.ts
src/routes/auth/login/: +page.svelte
src/routes/auth/login-cloud/: +page.svelte  +page.ts
src/routes/auth/register/: +page.svelte
src/routes/auth/register-cloud/: +page.svelte  +page.ts
src/routes/authentication/: +page.svelte  UserAuthForm.svelte
src/routes/cards/: CreateAccount.svelte
src/routes/dashboard/: +page.svelte  +page.ts
src/routes/first-time/: +page.svelte
src/routes/login/: +page.svelte  InputPassword.svelte  UserAuthForm.svelte
src/routes/login-cloud/: +page.svelte
src/routes/register-cloud/: +page.svelte
(+13 files in other folders)
